# MotionDetect_KunPart

./: .gitignore  CMakeLists.txt  README.md
BoostPythonCam/: BoostPythonCam.cpp  CMakeLists.txt
BoostPythonCam/CalibrationImageCollection/: CMakeLists.txt
CalibrationImageCollection/: CMakeLists.txt  CalibrationImageCollection.cpp
CameraCalibration/: CMakeLists.txt  CameraCalibration.cpp
DepthRGBRegistration/: CMakeLists.txt  DepthRGBRegistration.cpp  depth_0.avi  old.txt
DepthSaveEvent/: CMakeLists.txt  DepthSaveEvent.cpp
DepthSavePoll/: CMakeLists.txt  DepthSavePoll.cpp
DetectionApp/: DetectionApp.py  ExtractFeaturePoint.py  demo1.py  demo2.py  plot_motion_animation.py  readandmonitorV3.py  utils.py
DetectionApp/ui/: capture.ui  capture1.ui  curve.ui
FeaturePointsInfo/: CMakeLists.txt  FeaturePointsInfo.cpp  FeaturePointsInfo_CUDA.cpp
ImagesRead/: CMakeLists.txt  ImagesRead.cpp
PCLTest/: CMakeLists.txt  PCLTest.cpp
include/: BoostPythonCam.h  CameraModel.h  Utility.h  conversion.h
scripts/: totalttt.txt
scripts/plot_test/: plot_kun.py  plot_position.py
scripts/total/: all_test.py  motion.txt  real_time_test.py  statics.py  ttt.txt
scriptsMATLAB/: depth_calibrationSession.mat  depthcalib.m  rgb_calibrationSession.mat  rgbcalib.m
source/: 0305_68_01.xlsx  CameraParams.json  motion.txt  points.txt  rgb.prn  timeregistration_existingimg_time_C.txt  文件结构.pptx
source/20240314/: 0312_68_01.txt  0312_68_01.xlsx  0312_68_02.txt  0312_68_02.xlsx  motion1.txt  motion2.txt  points1.txt  points2.txt
source/20240326/: 1_68.txt  1_68.xlsx  2_68.txt  2_68.xlsx  3_68.txt  3_68.xlsx  motion1.txt  motion2.txt  motion3.txt  points1.txt  points1_12.txt  points2.txt  points3.txt  points3_12.txt
source/20240428/Data1/: motion.txt  point_12.txt  point_6.txt
source/20240429/Data1/: feature.txt  motion.txt  point_12.txt  point_6.txt
source/20240429/Data2/: feature.txt  motion.txt  point_12.txt  point_6.txt
source/20240429/Data3/: point_12.txt
source/20240429/Data4/: point_12.txt  point_6.txt
source/20240429/t/: feature.txt  motion.txt  point_12.txt  point_6.txt
source/20240429/数据与电脑录屏/上下/: feature.txt  motion.txt  point_12.txt  point_6.txt
source/20240429/数据与电脑录屏/左右/: feature.txt  motion.txt  point_6.txt
source/20240429/数据与电脑录屏/综合/: feature.txt  motion.txt  point_12.txt  point_6.txt
source/20240429/数据与电脑录屏/静止/: feature.txt  motion.txt
source/Calibration/Depth/: depth_param.txt  depth_param_matlab.txt
source/Calibration/RGB/: rgb_param.txt  rgb_param_MATLAB.txt
source/Foxit PDF Editor/ConnectedPDF/: cAppID.host
source/time/: get_feature_points_3D_time_C.txt  get_feature_points_3D_time_Py.txt  get_pose_6p_time_C.txt  get_pose_6p_time_Py.txt  read_img_time_C.txt  read_img_time_Py.txt  read_mode_time_C.txt  read_mode_time_Py.txt  registration_existingimg_time_C.txt  registration_existingimg_time_Py.txt
src/: CameraModel.cpp  Utility.cpp  conversion.cpp  points.txt  rgb.CSV  rgb.txt
src/1/Calibration/RGB/: rgb_param.txt
src/Calibration/Depth2/: depth_param.txt
